<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="csp_customerInterfaces_material" Id="{79a09156-566a-4b1c-9ec3-fe80d18c15d0}">
    <Declaration><![CDATA[(*********************************** G.D S.p.A. - Technical Department ***********************************
============= PROGRAM INFO ============
FOLDER:             TBD
MACHINES INVOLVED:  TBD 

============= DESCRIPTION =============
Machine declaration

============= REVISIONS ===============
Date		Version	 	Author      	Description             
----------	-------		------------  	--------------------------------------------
2019/03/27 	0000.00	 	CEC 			Creation of the PRG

**********************************************************************************************************)

TYPE csp_customerInterfaces_material :
STRUCT
	
	ID:							STRING;				(*$H_RW	act_when := IMMEDIATE ;
															desc := Material ID in current order; $*)
	QTY:						REAL;				(*$H_RW	act_when := IMMEDIATE ;
															desc := Total expected material QTY for current order; $*)
															
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>