<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="csp_customerInterfaces_order" Id="{9099aa06-09bc-4ef4-b2ce-058831254512}">
    <Declaration><![CDATA[(*********************************** G.D S.p.A. - Technical Department ***********************************
============= PROGRAM INFO ============
FOLDER:             TBD
MACHINES INVOLVED:  TBD 

============= DESCRIPTION =============
Machine declaration

============= REVISIONS ===============
Date		Version	 	Author      	Description             
----------	-------		------------  	--------------------------------------------
2019/03/27 	0000.00	 	CEC 			Creation of the PRG

**********************************************************************************************************)

TYPE csp_customerInterfaces_order :
STRUCT
	
	ID:								STRING;				(*$H_RW	act_when := IMMEDIATE ;
															desc := product order identifier; $*)
	SapBatchID:						STRING;				(*$H_RW	act_when := IMMEDIATE ;
															desc := SAP batch ID; $*)
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>