<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="csp_customerInterfaces_old" Id="{ac569058-6a86-003e-304d-856babde65c2}" SpecialFunc="None">
    <Declaration><![CDATA[ (*********************************** G.D S.p.A. - Technical Department ***********************************
============= PROGRAM INFO ============
FOLDER:             TBD
MACHINES INVOLVED:  TBD 

============= DESCRIPTION =============
Exit unit device declaration

============= REVISIONS ===============
Date		Version	 	Author      	Description             
----------	-------		------------  	--------------------------------------------
2019/03/27 	0000.00	 	CEC 			Creation of the PRG

**********************************************************************************************************)
(*$R process_ref:= prc; $*)

PROGRAM csp_customerInterfaces_old

VAR
	prc:								process;
	prc_path:							STRING;
	
	CasePacker:							csp_customerInterfaces_casePacker;
	Palletizer:							csp_customerInterfaces_palletizer;
	
END_VAR

VAR PERSISTENT
	Order:								csp_customerInterfaces_order;
	Product:							csp_customerInterfaces_product;
	Recipe:								csp_customerInterfaces_recipe;														
	Material:							ARRAY [0..14] OF csp_customerInterfaces_material;
	Mark:								csp_customerInterfaces_mark;
	NextOrder:							csp_customerInterfaces_order;	
	NextProduct:						csp_customerInterfaces_product;	
	NextRecipe:							csp_customerInterfaces_recipe;		
	NextMaterial:						ARRAY [0..14] OF csp_customerInterfaces_material;			
	MES:								csp_customerInterfaces_MES;	
		
END_VAR



]]></Declaration>
    <Implementation>
      <ST><![CDATA[_read_var_input();

_objects_manager();

IF NOT objects_running()
THEN
	RETURN;	
END_IF

_read_process_image();

_mode_manager();

CASE process_get_mode(prc) of
	MODE_ABSENT,
	MODE_INACTIVE:
		RETURN;
	MODE_TEST:
		_handle_process_test();
END_CASE

_set_runtime_properties();

(********************************* BODY *********************************)


(* CSP STATUS *)

Dock();
//CasePacker.Status.Online := machine_is_operational(csp.mch); 
//CasePacker.Status.Job := csp_main_brand.p_carton_format;
//CasePacker.Status.NextJob := // need to figure out next job
CasePacker.Status.Running := machine_is_running(csp.mch);

CasePacker.Status.Faulted.Main := machine_is_stopped(csp.mch)
									AND csp_main_interface.alarm_id_from_python <> 363 // CYCLE STOP FOR CASE SIDE
									AND csp_main_interface.alarm_id_from_python <> 622 // CYCLE STOP FOR TRANSFER SIDE
									AND csp_main_interface.alarm_id <> 363 // CYCLE STOP FOR CASE SIDE
									AND csp_main_interface.alarm_id <> 622; // CYCLE STOP FOR TRANSFER SIDE
									
CasePacker.Status.Faulted.CaseBlanks := csp_case_feed_magazine.AML_Faulted;

//CasePacker.Status.RunOut := csp_main_motorization.empty_command;
//CasePacker.Status.RunOutComplete := message_is_on(csp_case_virtualMaster.runout_complete);

CasePacker.Status.Rate.Target := LREAL_TO_INT(csp_main_motorization_manager.motm.actual_velocity_setpoint);
CasePacker.Status.Rate.Actual := LREAL_TO_INT(csp_main_motorization_manager.motm.actual_velocity);

CasePacker.Status.Stop.AutoReason := csp_main_interface.alarm_id; 
CasePacker.Status.Stop.Estop := machine_is_stop_emergency_active(csp.mch);
CasePacker.Status.Stop.Guard := NOT safety_integrated_series_is_safely_closed(csp_case_main_safety_guards.sis) OR NOT safety_integrated_series_is_safely_closed(csp_transfer_main_safety_guards.sis);
CasePacker.Status.Stop.Operator := message_is_on(csp_case_main_services_pushbuttons.stop_dchk.alarm_asm.message);

CasePacker.Status.Starved.CaseBlanks := message_is_on(csp_case_feed_magazine_level_zonemin.magazine_level_zone_min_wem);
CasePacker.Status.Starved.Glue := NOT digital_input_is_active(csp_case_glue_hotmelt.level_ok_di);
//CasePacker.Status.Starved.Labels :=
CasePacker.Status.Starved.Units := csp_transfer_infeed_clamp.min_prime;

CasePacker.Status.Blocked.Downstream := message_is_on(csp_case_discharge_reject_sensors.downstream_backup_hold_aem);
CasePacker.Status.Blocked.Reject := message_is_on(csp_case_discharge_reject_sensors.consecutive_blocked_reject_aem);
CasePacker.Status.Blocked.Waste := message_is_on(csp_transfer_crosspusher_reject.backup_di_dchk.alarm_asm.message);




 
(*
CasePacker.Start.PeakWait :=
CasePacker.Start.Ramp:=
CasePacker.Start.Request:=
CasePacker.Production.GoodCasesNoReset:=
CasePacker.Production.GoodPods:=
CasePacker.Production.GoodPodsNoReset:=*)
CasePacker.Production.GoodUnits:= csp_case_main_statistics.logsect.hmi_shift_independent_sampled_counters.total_good_products; //log_section_get_total_good_production(csp_case_main_statistics.logsect);
(*CasePacker.Production.GoodUnitsNoReset:=
CasePacker.Production.PercentScrapUnits:=
CasePacker.Production.Rejects.Infeed_waterfall:=
CasePacker.Production.Rejects.Accumulator:=
CasePacker.Production.Rejects.Case_Feed:=*)
CasePacker.Production.Rejects.Discharge:= csp_case_discharge_reject.Discharge_reject_count;
(*CasePacker.Production.Rejects.TBD5:=
CasePacker.Production.Rejects.TBD6:= *)
CasePacker.Production.TotalScrapUnits:= csp_case_main_statistics.logsect.hmi_shift_independent_sampled_counters.total_rejected; //log_section_get_total_rejected(csp_case_main_statistics.logsect);
CasePacker.Production.TotalUnits:= (CasePacker.Production.GoodUnits + CasePacker.Production.TotalScrapUnits);
(*CasePacker.Production.TotalUnitsNoReset:=

CasePacker.CaseBlanks.ConsumedCart:=
CasePacker.CaseBlanks.ConsumedTotal:=
CasePacker.Labels.Consumed:=
CasePacker.CtCall.FaultedCaseSupply:=csp_case_feed_magazine.AML_Faulted;
CasePacker.CtCall.FaultedMain:=machine_is_stopped(csp.mch);
CasePacker.CtCall.FullScrapBin:=
CasePacker.CtCall.LowCaseSupply:=csp_case_feed_magazine.Magazine_low_level;
CasePacker.CtCall.LowGlueSupply:=csp_case_glue_hotmelt.level_ok_di;
//CasePacker.CtCall.LowLabelSupply:=.
CasePacker.CtCall.TBD1:=
CasePacker.CtCall.TBD2:=
CasePacker.CtCall.TBD3:=
CasePacker.Dock[1].Active:=
CasePacker.Dock[1].AmrExited:=
CasePacker.Dock[1].DropAvailable:=
CasePacker.Dock[1].EntryAck:=
CasePacker.Dock[1].EntryOK:=
CasePacker.Dock[1].EntryReq:=
CasePacker.Dock[1].PickAvailable:=
*)

(************************************************************************)

_handle_messages();

_write_output();]]></ST>
    </Implementation>
    <Action Name="_handle_messages" Id="{df62cd29-a23e-004c-162d-0ee5c43f25c1}">
      <Implementation>
        <ST><![CDATA[;]]></ST>
      </Implementation>
    </Action>
    <Action Name="_handle_process_test" Id="{caf4f12f-ec2e-050f-0b41-56b32ee3be50}">
      <Implementation>
        <ST><![CDATA[;]]></ST>
      </Implementation>
    </Action>
    <Action Name="_mode_manager" Id="{dfa80415-250c-0c87-088b-1b57debb59b9}">
      <Implementation>
        <ST><![CDATA[IF process_mode_req_is_pending(prc)
THEN
    process_apply_mode_req_first_step(prc);
    CASE process_get_mode(prc) OF
        MODE_TO_ABSENT:
			;
        MODE_TO_INACTIVE:
			;
        MODE_TO_TEST:
			;
        MODE_TO_OPERATIONAL:
			;
    END_CASE
    process_apply_mode_req_second_step(prc);
END_IF]]></ST>
      </Implementation>
    </Action>
    <Action Name="_objects_manager" Id="{6b8dba24-7280-0d84-0a48-df373490c37c}">
      <Implementation>
        <ST><![CDATA[IF objects_initialization()
THEN
	process_init(
		object_name					:= 'csp_customerInterfaces.prc', 
		machine						:= csp.mch, 
		CONVERSION_this				:= prc);
		
	prc_path 						:= process_get_path(prc);
END_IF

IF objects_running()
THEN
	process_cycle(prc);
END_IF]]></ST>
      </Implementation>
    </Action>
    <Action Name="_read_process_image" Id="{5ef50803-44f9-02a0-3f68-e0e579367e0e}">
      <Implementation>
        <ST><![CDATA[;]]></ST>
      </Implementation>
    </Action>
    <Action Name="_read_var_input" Id="{c52c93b1-db66-0f30-3d2a-e323b365b01d}">
      <Implementation>
        <ST><![CDATA[;]]></ST>
      </Implementation>
    </Action>
    <Action Name="_set_runtime_properties" Id="{a1d69578-27ad-0fe6-29ca-4cf3f466ffe1}">
      <Implementation>
        <ST><![CDATA[//CasePacker.Status.Online := TRUE;]]></ST>
      </Implementation>
    </Action>
    <Action Name="_write_output" Id="{a47f31ae-601c-0123-3dbc-112c9affb139}">
      <Implementation>
        <ST><![CDATA[;]]></ST>
      </Implementation>
    </Action>
    <Action Name="Dock" Id="{4f93c9bb-961c-07c2-0fd4-c17e0641783d}">
      <Implementation>
        <ST><![CDATA[//Flexlink to AMR Dock 1
CasePacker.Dock[1].DropAvailable:= csp_case_feed_magazine.Flexlink_to_AMR_DropAvailable_1;
CasePacker.Dock[1].PickAvailable:= csp_case_feed_magazine.Flexlink_to_AMR_PickAvailable_1; 
CasePacker.Dock[1].Active:= csp_case_feed_magazine.Flexlink_to_AMR_Active_1;
CasePacker.Dock[1].EntryAck:= csp_case_feed_magazine.Flexlink_to_AMR_EntryAck_1;
CasePacker.Dock[1].EntryOK:= csp_case_feed_magazine.Flexlink_to_AMR_EntryOK_1;

(*csp_case_feed_magazine.AMR_to_Flexlink_EntryReq_1*) RAJ_to_Flexlink[3].0:= CasePacker.Dock[1].EntryReq;
(*csp_case_feed_magazine.AMR_to_Flexlink_AmrExited_1*) RAJ_to_Flexlink[3].1:= CasePacker.Dock[1].AmrExited;

//Flexlink to AMR Dock 2
CasePacker.Dock[2].DropAvailable:= csp_case_feed_magazine.Flexlink_to_AMR_DropAvailable_2;
CasePacker.Dock[2].PickAvailable:= csp_case_feed_magazine.Flexlink_to_AMR_PickAvailable_2; 
CasePacker.Dock[2].Active:= csp_case_feed_magazine.Flexlink_to_AMR_Active_2;
CasePacker.Dock[2].EntryAck:= csp_case_feed_magazine.Flexlink_to_AMR_EntryAck_2;
CasePacker.Dock[2].EntryOK:= csp_case_feed_magazine.Flexlink_to_AMR_EntryOK_2;

(*csp_case_feed_magazine.AMR_to_Flexlink_EntryReq_2*) RAJ_to_Flexlink[3].2:= CasePacker.Dock[2].EntryReq;
(*csp_case_feed_magazine.AMR_to_Flexlink_AmrExited_2*) RAJ_to_Flexlink[3].3:= CasePacker.Dock[2].AmrExited;

//Flexlink to AMR Dock 3
CasePacker.Dock[3].DropAvailable:= csp_case_feed_magazine.Flexlink_to_AMR_DropAvailable_3;
CasePacker.Dock[3].PickAvailable:= csp_case_feed_magazine.Flexlink_to_AMR_PickAvailable_3; 
CasePacker.Dock[3].Active:= csp_case_feed_magazine.Flexlink_to_AMR_Active_3;
CasePacker.Dock[3].EntryAck:= csp_case_feed_magazine.Flexlink_to_AMR_EntryAck_3;
CasePacker.Dock[3].EntryOK:= csp_case_feed_magazine.Flexlink_to_AMR_EntryOK_3;

(*csp_case_feed_magazine.AMR_to_Flexlink_EntryReq_3*) RAJ_to_Flexlink[3].4:= CasePacker.Dock[3].EntryReq;
(*csp_case_feed_magazine.AMR_to_Flexlink_AmrExited_3*) RAJ_to_Flexlink[3].5:= CasePacker.Dock[3].AmrExited;]]></ST>
      </Implementation>
    </Action>
  </POU>
</TcPlcObject>